2005-03-31  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c:
	Fix X error handling to, uh, not hang.

2005-03-30  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcbint.h:
	Accept zero or more replies to any request. Eliminates, for the
	moment, nearly all run-time error checking regarding the number
	of replies expected for a particular request. Also breaks the
	unexpected reply callback, which is OK because I was going to
	remove it anyway, and now I've done so.

2005-03-30  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_list.c, src/xcbint.h:
	Add a map ADT implemented using the list ADT.

2005-03-28  Vincent Torri  <torri@iecn.u-nancy.fr>

	* doc/tutorial/index.html, doc/tutorial/xcb.css:
	Add a tutorial

2005-03-27  Jeremy Kolb  <jkolb@brandeis.edu>

	* src/Makefile.am:
	Added xf86dri (xcb-proto/src/extensions/xf86dri.h).
	Removed compilation of record as it's broken.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c:
	Instead of storing a pending flag per reply record, look in the
	readers list to find out whether there's a reader waiting for
	the reply we've just been asked to wait for.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_list.c, src/xcbint.h:
	Add _xcb_queue_is_empty.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcb_list.c, src/xcbint.h:
	Add a queue ADT. Currently implemented using the list ADT, but
	analysis will probably suggest a better data structure. The
	split is intended to help that analysis.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c, src/xcb_list.c, src/xcbint.h:
	Remove _xcb_list_length. (Two callers in xcb_in didn't actually
	care about the returned value beyond "empty" or "non-empty",
	which they can get other ways.) _xcb_in_events_length became
	obsolete in the process, and I took _xcb_list_clear out of
	xcbint.h while I was at it because only _xcb_list_delete calls
	it these days.

2005-03-25  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h, src/xcb_in.c: